--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/pandasonali568@gmail.com" method="post" class="php-email-form">
+            <form action="https://formsubmit.co/dwisdomtechnology@gmail.com" method="post" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
