--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/dwisdomtechnology@gmail.com" method="post" class="php-email-form">
+            <form action="https://formsubmit.co/2f62e7eabc0c1181000bd73c60cc6b3e" method="post" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
