--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dwisdom- Home</title>
+  <title>Dwisdom</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -53,7 +53,6 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -73,7 +72,7 @@
             through cutting edge technologies.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+              <a  class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Get Started</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
@@ -285,7 +284,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/2f62e7eabc0c1181000bd73c60cc6b3e" method="post" class="php-email-form">
+            <form onsubmit=" sendEmail(); reset(); return false ;" method="post" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -348,7 +347,23 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script>
+    function sendEmail()
+    {
+      Email.send({
+      Host : "smtp.gmail.com",
+      Username : "dwisdomtechnology@gmail.com",
+      Password : " dwisdom@2022",
+      To : 'dwisdomtechnology@gmail.com',
+      From : document.getElementById("email").value,
+      Subject : "Contact Form Dwisdom",
+      Body : "And this is the body"
+      }).then(
+      message => alert(message)
+      );
+    }
+ </script>
 </body>
 
 </html>
