--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+                  <input type="text" class="form-control" name="Phone" placeholder="Phone no." required>
                 </div>
 
                 <div class="col-md-12">
@@ -304,10 +304,6 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
                   <button type="submit">Send Message</button>
                 </div>
               </div>
@@ -358,9 +354,12 @@
       To : 'dwisdomtechnology@gmail.com',
       From : document.getElementById("email").value,
       Subject : "Contact Form Dwisdom",
-      Body : "And this is the body"
-      }).then(
-      message => alert(message)
+      Body : "Name :" + document.getElementById("name").value
+           + "<br> Email: " + document.getElementById("email").value
+           + "<br> Phone no: " + document.getElementById("phone").value
+           + "<br> Message: " + document.getElementById("message").value
+      }).then(          
+      message => alert("Message sent successfully")
       );
     }
  </script>
